--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -46,7 +46,7 @@
   <div id="contents">
     <img src="blizzardstorm.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.50]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.51]</h1><br><br><br>
 
     <h3 style="text-align:center">Spells Mastered</h3><br>
 
@@ -75,6 +75,58 @@
 
 
 
+
+
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 43p] It's worth remembering these wise words from Steve Jobs when he was asked to address the graduating class at Stanford:<br>
+    Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma――which is living with the results of other people's thinking. Don't let the noise of others' opinions drown out your own inner voice. And most important, have the courage to follow your heart and intuition. They somehow already know what you truly want to become. Everything else is secondary.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 40p] The great gift of being human is our capacity to see the world anew invent new solutions――and then use what we know to transform our lives and change our world. Culture isn't static. It lives and breathes, made by us in real time in the flow of life, meant to change as our world changes.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 40p] Law 2: Question the Brules.<br>
+    Extraordinary minds question the Brules when they feel those Brules are out of alignment with their dreams and desires. They recognize that much of the way the world works is due to people blindly following Brules that have long passed their expiration date.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 37p] A healthy disregard for senseless rules and the mind of an innovator can be explosive when combined.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 25p] I'm not advocating that you instantly reject all the rules you've ever followed, but you must question your rules constantly in order to live by the code that is most authentic to your goals and needs. "My family/culture/people have always done it this way" is not an acceptable argument.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 15p] While breaking away from the rules of the culturescape may indeed feel scary, I've often noticed a repeated pattern. The dips contain amazing learnings and wisdom that lead to sharper rises in the quality of life afterward. But you will need to brave the momentary pain of these dips.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 15p] The culturescape is designed to keep us safe. But as I've mentioned, safety is often overrated. Elon Musk answered my question, he spoke at length about his journey and what drove him――but he ended with one memorable line: "I have a high tolerance for pain."
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 15p] Law 1: Transcend the culturescape.<br>
+    Extraordinary minds are good at seeing the culturescape and are able to selectively choose the rules and conditions to follow versus those to question or ignore. Therefore, they tend to take the path less traveled and innovate on the idea of what it means to truly live.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 13p] What if life was not meant to be save? Instead, what if it was meant to be a beautiful joyride, with ups and downs as we take off the training wheels of the culturescape and try out things outside what is practical or realistic?<br>
+    what if we accepted that things will go wrong―but that this is smply part of life's beautiful unfolding and that even the biggest failures can have within them the seeds of growth and possibility?<br>
+    Our culturescape evolved to keep us safe――but in this day and age, we no longer need to fear tigers by the riverbank. safety is overrated; taking risks is much less likely to kill us than ever before, and that means that playing it safe is more likely just holding us back from the thrills of a life filled with meaning and discovery.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 3p] When you grow up, you tend to get told that the world is the way it is and your life is just to live your life inside the world. Try not to bash into the walls too much. Try to have a nice family life, have fun, save money. That's a very limited life. Life can be much broader once you discover one simple fact. That is――everything around you that you call life was made up by people no smarter than you. And you can change it. You can influence it... Once you learn that, you'll never be the same again. - Steve Jobs
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND XXp] All of this happend because, despite my ordinary beginnings, I do have one unique skill that has served me time and again. It's a skill I used to develop the framework for this book―a framework I've designed to help you step out of whatever ordinary circumstances you'd like to move beyond.<br>
+    If I had to summarize this skill, it's this――I'm a sponge when it comes to learning from others and connecting the dots. I am fortunate to have the abilit to soak up knowledge and wisdom easily from all sorts of people―from billionairs to monks―and then "codify" these ideas, connect those bits of knowledge, and construct unique new models for understanding the world. This is my gift.
+    <br><br>
 
     <a></a>
     [스틸니스 284p] 일, 관계 우리 자신을 위해 쓸 수 있는 에너지는 한정되어 있다. 지혜로운 사람은 이 사실을 받아들이고 주어진 에너지를 신중히 활용한다. 잠을 자야만 최고의 정신 상태를 유지할 수 있기 때문에 위대한 사람들은 잠을 소중히 여긴다. 그들은 '노'라고 말한다. 한계에 부딪히면 잠자리에 든다. 수면 부족이 판단력을 훼손하는 일을 허락하지 않는다.
