--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -57,7 +57,7 @@
 
 
 
-  <h1>The War of Genesis III[Lv.53]</h1><br><br><br>
+  <h1>The War of Genesis III[Lv.56]</h1><br><br><br>
 
   <h3 style="text-align:center">Characters Obtained</h3><br>
 
@@ -80,7 +80,33 @@
 
 
 
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(032821): 1(+2EXP)<br>
 
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  PKROMEDA ACTIVATION(032721): 10(+20EXP)<br><br>
+
+  <a href="https://www.youtube.com/watch?v=XsIJXLnJA9A" title="책그림">
+    진짜 자산가가 알려주는 돈 버는 이야기 | 돈의 속성</a><br>
+
+  <a href="https://www.youtube.com/watch?v=wFo-2ge6w5k" title="책그림">
+    한 단계 밑에 있는 학교, 회사를 선택하라 | 책그림 백서 2편, 다윗과 골리앗</a><br>
+
+  <a href="https://www.youtube.com/watch?v=-PtFl7L-zBc" title="책그림">
+    이 책이 역주행 베스트셀러가 된 이유 | 모든 것을 차단하라 | 책그림 백서 3편</a><br>
+
+  <a href="https://www.youtube.com/watch?v=4S8nliU5y8U&t=10s" title="공백의책단장">
+    작년에 베스트로 손꼽았던 책들 중 한 권! 우울했던 공백이에게 한 줄기 빛과 같았던 책을 드디어 소개합니다 │ 작가의 탁월한 사색이 담긴 도서 〈외로움의 철학></a><br>
+
+  <a href="https://www.youtube.com/watch?v=EyooZAI2j4w" title="공백의책단장">
+    공백이 인생책 등극! │ 차별과 혐오, 몸과 시선에 대해 놀라운 생각의 전환을 가져다 준 책 │ 〈낙인찍힌 몸〉 염운옥</a><br><br>
+
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(031421): 1(+2EXP)<br>
+
+  <a></a><a></a>
+  PKROMEDA ACTIVATION(031321): 1(+2EXP)<br>
 
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <a></a><a></a><a></a><a></a>
