--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.115]</h1><br><br><br>
+    <h1>Karazhan Library[Lv.116]</h1><br><br><br>
 
     <h3 style="text-align:center">Classes Acquired</h3><br>
 
@@ -146,7 +146,8 @@
       [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
-    <h2><strong>심리학[Lv.10]</h2></strong>
+    <h2><strong>심리학[Lv.11]</h2></strong>
+      [습관과 중독]-이현수<br>
       [프레임]-최인철<br>
       [오래된 연장통]-전중환<br>
       [클루지]-개리 마커스<br>
