--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -46,7 +46,7 @@
   <div id="contents">
     <img src="blizzardstorm.gif" width="100%">
 
-    <h1>Ancient Spells[Lv.51]</h1><br><br><br>
+    <h1>Ancient Spells[Lv.55]</h1><br><br><br>
 
     <h3 style="text-align:center">Spells Mastered</h3><br>
 
@@ -77,6 +77,159 @@
 
 
 
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 129p] Your happiness will accelerate your movement toward your goals, but it should not be tied to them. The best thing you can do to meet your goals is to find a life balance that allows you to be happy now. Integrate practices into your daily routines that allow you to feel content and focus on the journey, not the destination. That's how you'll break free of stress and anxiety and be in the best position to fulfill your vision. We'll explore such practices in the next chapter.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 129p] We shouldn't do things so we can be happy. We should be happy so we can do things.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 128p] We make it hard for ourselves to achieve happiness because we've been trained to think about it in the wrong way. Many of us have fallen into the trap of the "if/then" model of happiness: If X happens(if I get the right job, find the perfect mate, buy that dream house, have a baby, write a bestselling book, etc.), then I'll be happy.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 128p] So, no matter where ou are in our life today, you must remember this lesson: Your happiness cannot be tied to your goals. You must be happy even before you attain them. Doing so will make life joyous and full of play and bring your goals to you faster than ever.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 127p] On Necker Island, as we were masterminding with Branson and getting life lessons from him, someone from my group asked him, "You're always happy. What do you do when you're sad?"<br>
+    Branson replied, "I can't remember the bad times. I only remember the good things that happened in my life."
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 127p] A key ingredient of this state is that your happiness is not tied to attaining your vision. It comes from the pursuit of your vision, combined with a sense of gratitude for what you already have.<br>
+    That way, you don't have to wait for happiness. It's just the natural by-product of pursuing your vision. You feel a deep sense of fulfillment. And you feel insanely motivated to keep moving forward. your work becomes like a craving. You can work twelve hours straight, and you might feel tired, but you won't burn out. All the truly great people I know have this beautiful happiness associated with pursuing their goals. Indeed, I think it's the only way to truly attain your goals――to be happy as you make the long, sometimes difficult climb toward great visions.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 126-127p] This is the ideal state where you're happy now――despite not having yet attained that vision. When you're in this state, there's a feeling of growth and enjoyment. It's about the journey as well as the destination. An interesting observation about this state is that it often seems as if the universe "has your back." Call it what you want――but it starts to feel as if you're lucky. The right opportunities, ideas, and people seem to gravitate to you. It's as if your happiness is rocket fuel moving you toward your vision.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 125p] Think of happiness in the now and vision for the future as two fingredients that can be combined, but here's the trick. They have to be in balance. Too much of one or the other creates imbalance and limitation.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 125p] When you're bending reality, your vision is continuously pulling you forward――but it doesn't feel like work. It feels like a game, a game you love to play. But at the same time, your happiness does not seem to be tied to that future vision. You're feeling elated and happy right now, in this moment. You're happy as you pursue your vision, not only when you attain it. You're thus grounded in the present.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 125p] 1. You have a bold vision for the future pulling you forward.<br>
+    2. Yet... you're happy in the NOW.<br>
+    But here's the key: BOTH of these stem from the present. As Paulo Coelho said in The Alchemist:<br>
+    Because I don't live in either my past or my future. I'm interested only in the present. If you can concentrate always on the present, you'll be a happy man.<br>
+    There's no point dwelling in the past and letting it define you, nor in getting lost in anxiety about the future. In the present moment, you're in the field of possibility. How you engage with the present moment will direct your life.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 124p] Bending reality is so named because when you're operating in this state, you tend to have a feeling that everything in life is bending in your direction, that you are effortlessly making things happen――and that anything is possible.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 124p] Have big goals――but don't tie your happiness to your goals. You must be happy before you attain them.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 124p] Keep the big goals――just don't tie your happiness to your goals. Be happy now.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 119p] Without realizing it, I'd stumbled upon a secret that video-game designers and psychologists had long been aware of. I was "gamifying" my life.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 115p] When you embrace the journey of personal growth you will find that the art of living seems to shift. Toil and pain seems to slow down. while magic and synchronicity seems to speed up.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 110p] Law 5: Upgrade your systems for living.<br>
+    Extraordinary consistently spend time discovering, upgrading, and measuring new systems for living applied to life, work, heart, and soul. They are in a perpetual state of growth and self-innovation.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 106p] A set point is simply a bare-minimum threshold you establish for yourself that you promise you will not go below. A set point differs from a goal. Goals pull you forward, while set points help you maintain what you have. You need both.<br>
+    You can establish set points for anything important to you. And here's a secret: You can use set points not only to prevent or reverse slipping but also to improve over time.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 105p] Things slip when we don't have a detection method for knowing when it's happening. Set points are that detection method.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 105p] The more you seek opportunities to learn and then apply your learnings, the faster your refresh rate.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 104p] Want to jump-start your progress? Aim to read one book a week. If you find this hard, start by first learning to speed-read. (You're upgrading your reading system.) With a few simple tricks, you can rapidly boost your reading speed.<br>
+    Reading is an easy and excellent way to boost your refresh rate. But you should also consider online courses, masterminds, networking groups, and seminars.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 101p] Whether related to work, health, fitness, personal growth, culture, or anything else, discovery is a life-affirming tool. It's not just about making life a little more interesting. It allows you to be better at what you want to do.<br>
+    ... Surely all of us can find the time to think in a different way about how to solve our own problems――massive or otherwise.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 99p] I try to upgrade at least one of my systems for living every week, not because I feel like things are always broken but because I know how energizing it is to try something new. It's exciting to think that we can just swap in a new system like downloading a new app.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 99p] Extraordinary people don't just have extraordinary models or reality. They strive to ensure that their systems for living――that is, DOING what they do in the world――are well defined, structured, and continuously optimized.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 99p] When you optimize your systems for living, you can experience exponential growth in areas that truly matter to you.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 96p] This, in Richard's words, is his "system" for starting game――changing companies. His focus is on hiring smart people, giving them freedom and getting out of the way, and continuously thinking of the vision, ensuring that a mission was driving the company.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 96p] So I asked him this: "Richard, you've started eight different companies in eight different industries and taken all of them to a billion dollars. That's huge. If you could summarize in one sentence how you did it, what would you say?"<br>
+    Richard idn't blink. He answered immediately like a wise, kind sage. Here's what he said:<br>
+    It's all about finding and hiring people smarter than you, getting them to join your business and giing them good work, then getting out of the way and trusting them. You have to get out of the way so you can focus on the bigger vision. That's important, but here is the main thing: You must make them see their work as a mission.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 95p] I think it's very important to have a feedback loop, where you're constantly thinking about what you've done and how you could be doing it better. I think that's the single best piece of advice: Constantly think about how you could be doing things better and questioning yourself. - Elon Musk
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 87p] Whether you're a CEO or a freelancer, an assistant or a manager, it is critically important that you find a way to enjoy our work.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 80p] Law 4: Rewrite your models or reality.<br>
+    Extraordinary minds have models of reality that empower them to feel good about themselves and powerful in shifting the world to match the visions in their minds.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 77p] When you replace disempowering models of reality with empowering ones, tremndous changes can occur in your life at a very rapid pace.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 72p] Much of growing wiser and moving toward the extraordinary is really about becoming aware of the odels or reality that you carry with you without realizing it.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 64p] AS you think of your personal growth, think of consciousness engineering as that trunk. The two big branches are odels of reality and systems for living. Everything you study in personal growth will either be a model(a new belief about money, for example) or a system (say, a new exercise or diet routine). These things cling to the two big branches.<br>
+    I've found that by keeping this idea in mind, I can learn and grow faster than before. Once you internalize consciousness engineering, every time you pick up a book to read on personal growth or health, or an autobiography of a great leader, you start to look for model upgrades that you can swap in and new systems you can adopt.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 57p] Our current models and systems have three limitations:<br>
+    1. Our models of reality are programmed by the world we grew up in.<br>
+    2. Our models of reality (good or bad) determine our systems for living. In short, bad beliefs create bad habits.<br>
+    3. Our modern models and systems are lacking in conscious practices-we're only just beginning to realize the power of our minds.
+    <br><br>
+
+    <a></a>
+    [THE CODE OF THE EXTRAORDINARY MIND 56p] Law 3: Practice consciousness engineering.<br>
+    Extraordinary minds understand that their growth depends on two things: their models of reality and their systems for living. They carefully curate the most empowering models and systems and frequently update themselves.
+    <br><br>
 
     <a></a>
     [THE CODE OF THE EXTRAORDINARY MIND 43p] It's worth remembering these wise words from Steve Jobs when he was asked to address the graduating class at Stanford:<br>
@@ -124,8 +277,8 @@
     <br><br>
 
     <a></a>
-    [THE CODE OF THE EXTRAORDINARY MIND XXp] All of this happend because, despite my ordinary beginnings, I do have one unique skill that has served me time and again. It's a skill I used to develop the framework for this book―a framework I've designed to help you step out of whatever ordinary circumstances you'd like to move beyond.<br>
-    If I had to summarize this skill, it's this――I'm a sponge when it comes to learning from others and connecting the dots. I am fortunate to have the abilit to soak up knowledge and wisdom easily from all sorts of people―from billionairs to monks―and then "codify" these ideas, connect those bits of knowledge, and construct unique new models for understanding the world. This is my gift.
+    [THE CODE OF THE EXTRAORDINARY MIND XXp] All of this happened because, despite my ordinary beginnings, I do have one unique skill that has served me time and again. It's a skill I used to develop the framework for this book―a framework I've designed to help you step out of whatever ordinary circumstances you'd like to move beyond.<br>
+    If I had to summarize this skill, it's this――I'm a sponge when it comes to learning from others and connecting the dots. I am fortunate to have the ability to soak up knowledge and wisdom easily from all sorts of people―from billionaires to monks―and then "codify" these ideas, connect those bits of knowledge, and construct unique new models for understanding the world. This is my gift.
     <br><br>
 
     <a></a>
