--- a/The_war_of_genesis_III.html
+++ b/The_war_of_genesis_III.html
@@ -57,7 +57,7 @@
 
 
 
-  <h1>The War of Genesis III[Lv.56]</h1><br><br><br>
+  <h1>The War of Genesis III[Lv.64]</h1><br><br><br>
 
   <h3 style="text-align:center">Characters Obtained</h3><br>
 
@@ -67,6 +67,8 @@
       <button class="pulse3"><img src="Character_죠안.png" width="100%" title="죠안 카트라이트"><b>죠안<br>카트라이트</b></button>
       <button class="pulse3"><img src="Character_얀.png" width="100%" title="얀 지슈카"><b>얀<br>지슈카</b></button>
       <button class="pulse3"><img src="Character_철가면.png" width="100%" title="철가면(클라우제비츠 팬드래건/샤른호스트)"><b>철가면<br>(샤른호스트)</b></button>
+      <br>
+      <button class="pulse3"><img src="Character_알바티니.png" width="100%" title="알바티니 데 메디치"><b>알바티니<br>데 메디치</b></button>
   </div>
 
 
@@ -82,12 +84,133 @@
 
 
 
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <a></a><a></a><a></a><a></a><a></a>
+  YOURTURNS ACTIVATION(042421): 7(+35EXP)<br><br>
 
+  <a></a>
+  [습관과 중독 164-165p] 중독자는 자신의 행동과 그 결과에 대해서는 강박적으로 생각하나 다른 주변의 문제, 예를 들면 가정생활문제에 대해서는 전혀 관심이 없다. 자신의 중독행동이 주위사람들에게 주는 영향에는 관심이 없다. 이로 인해 생활은 점진적으로 황폐화되고 발광적 행동은 지속된다. 이들은 이와 같은 자신의 부정적 생활의 변화에 대해 크게 잘못 생각한다. 자신의 문제는 자기 스스로 마음만 먹으면 통제 할 수 있다고 현실과 크게 다르게 생각한다.<br>
+  행동중독자는 자신의 중독욕구를 충족시키기 위해 그럴듯하게 변명을 한다. 식욕상실자의 신체적 특징은 보기 흉할 정도로 여위였다는 점이다. 그럼에도 불구하고 자기는 체중과잉자라고 생각한다. 그래서 자신은 체중을 경감시킬 필요가 있다고 생각한다. 사실은 자신이 심하게 여위었다는 사실을 전혀 생각하지 못한다. 성중독자는 난잡한 성생활을 즐긴다. 그것을 자신의 삶의 공허감에서 벗어나기 위한 것이라고 생각한다.<br>
+  행동중독자는 자존감이 낮고 불안이 심하다. 그들은 주위 환경을 자기의 뜻대로 통제하고 싶은 욕구가 강하다. 이 욕구가 성취되지 못하면 더욱 심한 불안을 느낀다. 또한 일찍 부모상실을 경험하는 등 신체적, 정서적 문제를 경험한 사람들의 생활 산물이다.<br>
+  부모의 행동중독은 자녀의 행동중독을 유발하는 주요 요인이다. 행동중독자의 부모는 자녀에 대한 관심이 적어 그들과 관계를 형성할 수 없다. 이는 자녀의 자존감 손상으로 이어진다. 이들 자녀는 부모처럼 성장 후에도 자신의 부족한 애정감정을 회복하기 위해 중독행동에 빠지는 사례가 많다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 163p] 정상적인 사람은 자신의 행동을 통해 유쾌한 기분을 경험하고 싶어 한다. 하지만 그것은 하나의 희망일 뿐이다. 모든 것이 뜻대로 이뤄지지 않는다. 이와는 달리 중독자는 자기가 얻고자 하는 것은 자신의 의지로 충분히 성취할 수 있는 것으로 생각한다. 중독자는 자신이 어떤 행동을 통해서 쾌감을 경험했다고 생각하면 그 행동을 계속적으로 반복하는 경향이 있다. 이는 결과적으로 행동중독의 빈도를 상승시키고 강도도 강화시킨다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 162p] 행동중독의 행동특성은 여러 가지 형태로 나타난다. 장애의 특성에 따라 다소간의 차이는 인정될 수 있으나 크게 다르지 않다. 유형과는 상관없이 모든 행동중독은 개인의 생활을 부정적으로 통정한다. 행동중독은 자신의 행동중독을 지나치게 강박적으로 생각한다. 그들은 지금 당장의 행동은 물론 자신이 다음에 어떤 행동을 할 것인가를 끊임없이 생각하고 그것을 실천할 계획을 세운다. 이 과정에서 자신이나 가족의 건강이나 웰빙에는 전혀 관심이 없다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 161-162p] 중독은 가족의 질병이다. 중독은 자기몰입의 질병으로 자기만의 문제로 끝나지 않는다. 이는 다른 가족구성원의 문제로 이어진다. 도박자의 부인은 남편의 빚을 갚기 위해 어려운 일을 해야 한다. 성중독자의 부인은 남편의 무절제한 성생활에서 오는 성병으로 고통을 받게 된다. 일중독자는 아내와 떨어진다. 자식의 학업에도 전혀 관심을 갖지 않는다. 이처럼 중독자의 가족구성원 모두 심한 불안과 우울증으로 고통 받고 있으며 심한 스트레스에서 벗어나지 못한다.<br>
+  중독자는 무기력감의 늪에서 벗어나지 못한다. 이는 개인 생활과 사회생활의 파탄으로 이어진다. 그들은 특정한 일에 종사할 수 없고 원만한 대인관계를 가질 수 없으며 부모의 역할도 기대할 수 없다. 결과적으로 정신병환자로 타락하게 된다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 155p] 행동중독은 비물질 중독, 혹은 프로세스 중독이라 불리우는 일종의 강박적 행동이다. 행동중독자는 자기의 행동이 자기 자신이나 주위사람들에게 유해하다는 사실을 알고 그것을 중단하거나 포기하기 위해 노력하지만 알면서도 자기 뜻대로 자신의 행동을 중단하거나 통제하는 것이 불가능하다. 이러한 행동중독에는 도박, 성, 음식, 일, 인터넷 등이 포함된다. 이들의 행동 특징을 통해 가족, 친구, 그리고 주위 사람들은 그가 중독자임을 알아차린다. 행동중독은 만성적으로 그리고 강박적으로 진행된다. 행동중독은 다른 물질중독과는 달리 약물복용의 필요성까지는 느끼지 못한다. 행동중독은 물질중독보다 이해하기가 어렵다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 124p] 동기모델의 주장자들은 중독은 통제의 상실상태가 아니라 인간 동기의 표출로 보기도 한다. 자기 효험의 신념은 개인이 어떤 곤경에 직면하였을 때 목표와 노력의 정도에 큰 영향을 준다. 만일 중독자가 어떤 자기 효험의 신념을 가졌다면 그의 극복목표와 그것을 극복하는 노력을 하게 하는 기능을 한다. 이때 생물학적으로 유발된 행동을 보다 적극적으로 대처해 나간다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 124p] 자기치료 모델에 따르면 중독은 자기 스스로 고통을 치료하고 부정적 정서와 자기의 삶을 통정하는 기술이라고 한다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 123-124p] 중독의 실체를 이해하고 그것을 보다 효과적으로 치료하는데 있어서 생물학적 요인이 차지하는 비중의 큰 것은 사실이다. 하지만 이에 못지않게 인간, 행동, 환경의 상호작용의 효과도 중요하다. 중독은 단순한 생리학적 과정이 아니다. 이는 여러 요인들의 상호작용의 산물이다. 특히 중독에서 심리학적 요인이 차지하는 비중이 크다. 중독은 심리학적 욕구의 산물로 도피의 수단으로 사용되기도 한다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 120p] 약물사용은 뇌의 활동과 밀접한 관계가 있다. 개인이 복용한 약물은 뇌의 활동에 보상을 준다. 빈번한 약물복용은 뇌의 활동 빈도를 상승시킨다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 119-120p] 스트레스 수준이 높은 사람이 중독되기 쉽다. 스트레스 극복을 위해 약을 복용하는 기회가 많기 때문에 이는 곧 중독으로 이어진다. 스트레스 호르몬 가운데 알코올 중독과 직결되는 것도 있다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 119p] 자신을 다른 사람과 비교하는 버릇이 있는 사람은 잠재적 약물 중독자가 될 가능성이 높다. 이러한 경향은 젊은 연령집단에서 많이 발견할 수 있다. 가족, 부모, 형제에게 강한 애착을 느끼지 못하는 사람일수록 중독에 빠지는 경향이 더 많다. 심한 고독감을 느끼는 사람일수록 보다 쉽게 중독된다. 왜냐하면 그들은 감정을 극복하기 위해 약물을 복용하는데 그것이 곧 중독으로 이어지기 때문이다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 119p] 중독유발 위험요인은 유전, 성차, 정신장애 등 매우 다양하다. 중독은 가족사와 밀접한 관계가 있다. 가족 중에 중독자가 있으면 중독의 위험성은 매우 높다. 가까운 가족과 유사한 환경에서 생활하기 때문이다. 혈족 간에 알코올 의존자가 있는 집단은 그렇지 않은 집단에 비해 알코올 의존자가 될 가능성이 6배나 높다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 118p] 중독은 신체적, 정신적, 그리고 정서적 요인의 통합 산물이다. 중독에는 의존성이 수반되지만 감내성은 수반되지 않는다. 중독자는 자기욕구충족을 위해 과도한 욕심을 부리는 성격특성이 있다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 117p] 자신의 의지로 자신의 행동을 통제하지 못하는 것이 중독이다. 특정한 음식을 먹고 싶 욕구, 지나치게 많은 시간을 인터넷 게임으로 즐기고 싶은 욕구, 사무실이나 가정생활에 영향을 줄만큼 많은 시간을 필드에서 머물고 싶은 욕구가 강한 사람이 있다. 이들은 자신의 욕구가 자신에게는 물론, 자신이 속해있는 지역사회에 크게 도움이 되지 않는다는 사실을 인지하지만 자신의 의지로 그것을 조절하지 못하고 자신의 힘으로 감당할 수 없는 사태로 몰고 간다. 이것이 곧 중독이다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 109p] 미국의 약물오용연구소는 중독을 "중독은 만성적으로, 혹은 빈번하게 재발하는 뇌의 질병이다. 중독자는 자신은 물론 중독자 주위의 사람들에게 해를 준다는 사실을 잘 안다. 하지만 그것을 자신의 의지로 극복하지 못하고 강박적으로 반복한다. 결국 중독자는 자기의 뜻에 따라 물질을 섭취하거나 도박을 반복한다. 즉 자기 스스로 통제하지 못하고 지속적으로 물질을 사용하거나 행동을 반복한다. 이것이 곧 중독이다"라고 정의하였다.<br>
+  이처럼 중독은 개인을 생리적으로, 심리적으로, 정서적으로 퇴폐시키는 일종의 정신질환이다. 중독자는 물질사용의 충동을 억제하는 기능이 결여되어 있다. 그들은 그 물질복용이 자신을 퇴폐시키고 주위의 사람들의 행동에 큰 영향을 주며, 반복적으로 재발한다는 사실은 충분히 인지하고 있다.<br>
+  중독, 습관, 강박적 행동에는 차이점과 유사점이 있다. 중독의 행동은 독자적 행동만으로 볼 수 없다. 보다 과학적인 입장에서 보면 습관은 일종의 강박적 행동이다. 강박적 행동이 습관적으로 행해지는 것을 볼 수 있다. 예를 들어 식사 후 이를 닦고 손을 씻는 것은 습관적 행동이다. 하지만 그것은 심리적으로나 의식적 관점에서 보면 강박적 행동에 대한 보상으로 생각할 수 있다.<br>
+  습관은 강박적 행동과는 달리 자기 스스로 결심하면 변화할 수 있다. 이것이 강박적 행동과 크게 다른것이다. 습관과 강박적 행동은 그 진행과정이 매우 유사하다. 이들이 특정한 화학적 물질에 대해 의존성이 생기면 곧 중독으로 이어진다. 예를 들면 가족과 함께 저녁식사에 맥주 한두 잔을 즐겨 마시는 것은 습관이다. 아무런 질병이 아니다. 도리어 건전한 식사습관이다. 그러나 우울한 기분을 전환시키기 위해 혹은 부정적 감정에서 벗어나기 위해 많은 양을 마시는 것은 중독이다. 강박적 행동과 중독은 마시고 싶은 물질이나 즐기고 싶은 활동을 통제하는 것이 불가능하다. 그러므로 상담자나 전문가의 치료나 상담을 받아야 한다. 치료자나 상담자는 습관, 강박적 행동, 그리고 중독의 공통점에 대한 많은 지식을 가질 필요가 있다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 109p] 머릿속에 강박적 사고가 축적되면 그것이 행동으로 표출된다. 이럴 때에는 스스로 문제를 해결하기 위해 행동으로 옮긴다. 이는 개인이 불안에서 벗어나는데 도움이 되기는 하지만 불안 강박적 행동에 의해 불안의 수준이 높아지기도 한다. 강박적 행동은 전문가의 도움이 없이는 극복하기가 매우 어렵다. 강박적 행동에서 자기 스스로 벗어나고 싶어서 노력해도 뜻대로 되지 않은 장애가 강박적 장애이다. 강박적 장애는 자신의 강박적 행동을 자신의 의지로 통제하는 것이 불가능하다. 그들은 자신의 행동이 자신에게는 물론 남에게 큰 피해를 준다는 것은 잘 안다. 그래서 그것을 중단하고 싶지만 뜻대로 되지 않는다. 결국 유해물질을 섭취하거나 도박을 하게 된다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 107-108p] 습관, 강박적 행동, 그리고 중독은 의지력에 의해서 특성이 결정된다. 만일 자신의 행동을 의지적으로 충분히 통제가 가능하다면 그것은 습관이다. 습관적 행동은 의지력에 의해 충분히 통제가 가능하다. 이와는 달리 자신의 행동을 의지적으로 중단하거나 그 빈도를 경감시키는 것이 불가능하다면 이는 강박적 행동 혹은 중독행동이다. 강박적 행동은 자신의 의지로 방어가 불가능하다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 107p] 새로운 습관은 일관성 있게 반복함으로써 어렵지 않게 습득된다. 어떤 행동이나 보상을 받거나 보다 긍정적 감정을 경험하게 되면 습관고리가 형성된다. 일단 고리가 형성된 습관행동은 자동적으로, 그리고 무의식적으로 작동한다. 많은 연구자들의 주장에 따르면 우리들의 일상생활의 40%는 동일한 상황에서는 습관적으로 이뤄진다고 한다. 코를 훌쩍거리는 것, 손톱을 깨무는 것, 말을 더듬는 것은 습관적으로 이뤄진다. 밤에 취침 전에 자명종시계의 시간을 고정하는 것, 외출할 때 자물쇠를 채우는 것도 습관이다. 더 깊이 들어가보면 이와 같은 습관적 행동은 긴장, 불만, 욕구불만과 무관할 수 없다. 안절부절 못하는 버릇, 과잉지출, 일을 지나치게 미루는 것은 바람직하지 못한 나쁜 습관이다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 107p] 습관의 이면에 숨겨진 행동은 어떤 것이나 신경통로에 각인된다. 그러므로 새로운 습관을 형성하기 보다는 이미 습득한 습관을 수정하기가 더 어렵다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 104-106p] 한 가지 분명한 사실이 하나 있다. 어떤 유형의 중독의 경우이든, 즉 약물중독이든 행동중독이든 어떤 행동이 일어나면 뇌의 보상중추는 활성화된다. 약물을 섭취하거나 컴퓨터에 몰입하면 뇌의 보상중추에서는 유사한 행동이 활성화된다.<br>
+  뇌는 자극을 받으면 기분 좋은 화학적 물질을 분비한다. 그러므로 개체는 이와 같은 좋은 기분을 주는 물질ㅇ르 지속적으로 추구하게 된다. 결국 개인의 삶의 본능까지도 포기해버리는 경우에 이른다. 이들은 자신에게 문제가 있다는 사실을 깨닫고 행동을 중단하려고 시도하지만 자신의 의지로는 통제가 불가능하다. 그들의 주위사람들은 그가 자기 스스로 자멸적 행동을 지속하고 있다는 것을 확실하게 발견해 낼 수 있다.<br>
+  인간의 생활은 어떤 면에서는 강박적 행동의 산물로 볼 수 있다. 자신의 삶을 위해 음식을 섭취한다. 자신과 자신의 가족을 부양하기 위해 돈을 번다. 후손을 얻기 위해 결혼을 한다. 이것들이 모두 자신에게 쾌감을 주고 만족감을 준다. 이와 같은 주기는 반복적으로 자연스럽게 이뤄진다.<br>
+  행동중독자는 쾌감을 성취하기 위해 자신의 시간과 에너지를 쏟아 붓는다. 결과적으로 가정을 파탄시키고 경제적 위기에 직면하게 만든다.(중략)<br>
+  여러 가지 화학적 물질, 예를 들면 알코올에 대한 신체적 중독과 강박적 도박, 성, 과도한 신체적 운동, 쇼핑에 대한 심리적 의존성은 매우 유사하다. 이들 행동에 의해 뇌에서는 엔돌핀이 분비되어 개인의 기분을 각성시킨다. 이러한 기분상태가 장시간 지속되면 중독 사이클이 형성된다. 이렇게 되면 개인으니 베타-엔돌핀에 중독되어 웰빙감정에 사로잡히게 되어 그 상태를 지속적으로 유지하고 싶어 한다. 이는 곧 중독성으로 변하고 강박적으로 그리고 자기 파괴의 행동으로 발전한다.<br>
+  문제는 행동중독자는 그것을 어느 시점에서 중단할 것인지를 알지 못하는 데 있다. 알코올, 헤로인 혹은 바르비투르약제에도 심리적 효과가 내포되어 있다. 헤로인 중독자의 약물중단에는 신체적 금단 증후가 따른다. 이와 같은 반응은 알코올의 경우도 마찬가지로 알코올 중독자가 알코올을 섭취하지 못하게 되면 신체적 금단 증후에 사로잡히게 되고 그에 대한 심한 두려움을 겪게 된다. 이와 같은 증후는 약물이나 알코올을 끊은 몇 해 후에도 다시 되살아난다. 약물이나 물질에 대한 의존 증후는 쉽게 치유되지 않고 상당기간 오래 지속된다. 이와 같은 사실을 보면 물질중독과 약물중독은 매우 유사한 공통점이 있다는 사실을 알 수 있다. 그러므로 두 가지 중독, 물질중독과 행동중독은 분리시켜 생각할 수 없다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 104p] 행동중독은 개인의 기분과 정서에 영향을 주어 곧 의기충전상태 혹은 병적쾌감상태에 빠진다. 이와 같은 증상은 약물중독자가 경험하는 것과 크게 다름이 없다. 약물중독과 같이 행동중독의 의기충전상태는 생리적 기반에서 이뤄진다. 즉 행동중독자가 중독행동을 하게 되면 뇌에서 세로토닌 혹은 아드레날린이 분비되고 그 결과 약물중독자가 경험하는 것과 같이 강박적으로 음식을 갈구하기도 하고 성행동을 추구하기도 한다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 103p] 습관은 무의식적으로, 그리고 자동적으로 이뤄지는 반복적인 활동이나 행동을 의미한다. 행동이 뇌 속에 기록될 때까지 자동적으로 반복한다. 즉 습관은 무의식적으로 또 반복적 과정에 의해서 수행된다. 이 과정은 자신의 의지에 의해 자유롭게 통제가 가능하다. 이것은 중독과는 거리가 먼 행동이다.<br>
+  그러나 중독의 경우에는 다르다. 중독은 자신이 하고 있는 행동을 경감하거나 포기하려고 노력해도 뜻대로 되지 않는다. 지속적으로 하던 일을 지속한다. 신체에 부정적인 영향을 준다는 사실을 잘 알면서도 화학물질인 약을 복용하는 물질중독자가 이 부류에 속한다. 중독은 신체적 증후로 나타나는 것도 있고 정신적으로 나타나는 것도 있다. 중독자는 자신의 행동이 자기에게 유해하다는 사실을 잘 알면서 자신의 의지로 자신의 행동을 준지시키거나 바꿔보고 싶어도 뜻대로 되지 않는다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 102p] 중독은 일종의 극단적 형태의 습관이다. 아주 미세한 특징은 복용자가 통제할 수 없다는 것이다. 대부분의 중독자들은 자신이 어떤 물질에 중독되었다는 것을 알아도 자기의 의지로 약물을 준단할 수도 없고 생활을 변화시킬 수도 없다. 중독되면 환자는 그 물질을 얻기 위해 온갖 노력을 한다. 중독은 복용하는 물질을 중단하였을 때 심한 금단증후가 수반된다. 또한 개인의 기억, 의사결정기능, 그리고 학습능력에도 큰 영향을 준다. 습관은 자신의 의지로 변화시킬 수 있고 수정할 수 있으나 중독은 그 생활을 변화시킬 수 없고 그 행동을 자기의 노력으로 변화시키거나 수정할 수도 없다. 반드시 전문가의 도움을 필요로 한다. 습관은 자기가 만난 사람을 통해 또 자신의 의사결정에 따라 변화시킬 수 있고 수정할 수도 있다. 그러나 중독은 자기가 복용하는 물질이 없을 때에는 매우 심한 고통을 피할 수 없다. 이처럼 중독에는 위험이 따른다. 심신이 쇠약해지고 장기간 지속되면 죽음에 이르게 된다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 93p] 우리 생활은 여러 가지 행동의 연쇄과정이다. 우리가 행동할 때마다 새롭게 사고한다고 해서 일이 보다 순조롭게 이뤄지지 않는다. 오히려 일의 진행과정이 손상되는 경우가 생긴다. 이처럼 습관은 어떤 과제를 수행하는데 필요한 에너지를 절약하는 기능이 있다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 75p] 사람들에게는 꿈을 이루겠다는 의지가 있다. 그러나 그것을 성취하겠다는 용기가 부족한 사람이 많이 있다. 이런 사람들에게는 성공이 보장되지 않는다. 그들은 관습에서 벗어나는 것을 두려워하기 때문이다. 새로운 것을 꿈꾸고, 큰 것을 이루겠다는 야망을 가진 사람은 관습을 버리고 새로운 것을 추적하는데 아무런 두려움을 느끼지 않는다. 다른 사람보다 많은 것을 갖고자 하는 사람은 다른 사람보다 많은 것을 얻는다.
+  <br><br>
+
+  <a></a>
+  [습관과 중독 73p] 우리 일상행동은 매우 다양하고 새로운 것 같지만 40% 이상이 습관의 연속이다.
+  <br><br>
 
   <a></a>
   [습관과 중독 67-68p] 부정적 습관을 효과적으로 극복하기 위해서는 첫째, 무엇보다도 자신에게 어떤 부정적 습관이 있는지 그 실체를 스스로 깨닫는 것이 중요하다. 이를 위해 자신이 부정적 습관행동을 할 때마다 일정한 방식으로 기록할 필요가 있다. 예를 들어 자신에게는 식전에 스낵을 지나치게 많이 먹는 버릇이 있다는 것을 깨달았다고 하자. 이 버릇을 극복하기 위해서는 스낵을 먹고 싶은 식욕이 생길 때마다 인덱스 카드에 기록한다. 일주일 동안 수집한 기록을 분석해서 빈도를 정확하게 파악해둔다. 이를 몇 주만 계속하면 그 습관에서 자연스럽게 벗어날 수 있다.<br>
   둘째, 자신의 부정적 습관을 스스로 깨닫고 극복하기 위해서는 그와 양립불가능한 행동이 무엇인가를 찾아 행동으로 옮긴다. 예를 들어 식전에 스낵을 먹고 싶은 생각이 들면 식탁에 있는 물을 한컵 마시거나 정원에 나가 걷기를 한다.<br>
-  셋째, 부정적 습관을 극복하기 위해 자기보상을 한다. 부정적 습관에 대한 욕구가 생길 때마다 그것을 억제하는 것에 대해 스스로 지속시키는 것이 아니라 긍정적 습관을오 대치시키는 수단이 된다.
+  셋째, 부정적 습관을 극복하기 위해 자기보상을 한다. 부정적 습관에 대한 욕구가 생길 때마다 그것을 억제하는 것에 대해 스스로 지속시키는 것이 아니라 긍정적 습관으로 대치시키는 수단이 된다.
   <br><br>
 
   <a></a>
